# globus-cwlogger

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: release.yaml  test.yaml
changelog.d/: 20240829_070631_kurtmckee_fix_coverage_run_parallel.md  20240829_081605_kurtmckee_poetry.md
client/: setup.py
client/globus_cw_client/: client.py
daemon/globus_cw_daemon/: config.py  cwlogs.py  daemon.py  local_logging.py
log_handler/: README.md  setup.py  test_requirements.txt  tox.ini
log_handler/globus/: __init__.py  cwlogger.py
log_handler/tests/: conftest.py  test_log_handler.py
tests/: test_log_bad_event.py
