[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
name = "globus-cw-client"
version = "1.2"
description = "Client for Globus CloudWatch Logger"
authors = ["Stephen Rosen <sirosen@globus.org>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
orjson = "^3.10.7"


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "globus_cw_client",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 84


# isort
# -----

[tool.isort]
profile = "black"


# mypy
# ----

[tool.mypy]
ignore_missing_imports = true
sqlite_cache = true


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "md"
md_header_level = "2"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main"]
